small fix to centrally align galerry item caption

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -130,7 +130,7 @@ input:active + label {
   margin-left: auto;
   margin-right: auto;
   display: block;
-  max-width: 100%;
+  width: 100%;
   max-height: 100%;
   align-self: center;
 }
